# k8s-tools

./: README.md
ls-netpol/go/: go.mod  main.go
ls-netpol/python/: README.md  ls-netpol.py  requirements.txt
ls-netpol/shell/: ls-netpol.sh
secrets2vault/: README.md  create-secret.py  decode-stdin.py  pyproject.toml
secrets2vault/go/: go.mod  main.go
volumefollower/: CLAUDE.md  README.md  pyproject.toml
volumefollower/src/volumefollower/: __init__.py  k8s.py  main.py
volumefollower/tests/: test_main.py
