[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "volumefollower"
version = "0.1.0"
description = "VolumeFollower - Kubernetes volume and pod utility"
authors = [{ name = "Fredrik Broman" }]
license = { text = "Unlicense" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["kubernetes>=32.0.1"]

[project.scripts]
volumefollower = "volumefollower.main:main"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "black"]

[tool.ruff]
target-version = "py38"
line-length = 88
select = ["E", "F", "B", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
